--- a/src/styles.css
+++ b/src/styles.css
@@ -50,6 +50,8 @@ body {
   color: var(--primary-text-color);
   transition: 0.3s ease;
   min-height: 200vh;
+  --primary-bg-transition-time: 0.4s;
+
 }
 
 
