initial create listing

--- a/src/app/layout/main-layout/main-layout.html
+++ b/src/app/layout/main-layout/main-layout.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
+<app-host-properties> </app-host-properties>
+<main>
+  <router-outlet></router-outlet>
 
-
-<main class="main-content" style="margin-top: 12rem;">
 </main>
+<app-footer></app-footer>
