--- a/src/app/shared/components/slider/slider.html
+++ b/src/app/shared/components/slider/slider.html
@@ -1,7 +1,17 @@
 <div class="slider-wrapper col-12">
-    <div class="d-flex justify-content-end ">
-        <button class="nav left" (click)="scrollLeft()" [disabled]="isAtStart">❮</button>
-        <button class="nav right" (click)="scrollRight()" [disabled]="isAtEnd">❯</button>
+    <div class="d-flex justify-content-end gap-0 ">
+        <button 
+            class="nav left pe-0" 
+            (click)="scrollLeft()" 
+            [disabled]="isAtStart">
+            <i class="bi bi-arrow-left-short"></i>
+        </button>
+        <button 
+            class="nav right ps-0" 
+            (click)="scrollRight()" 
+            [disabled]="isAtEnd">
+            <i class="bi bi-arrow-right-short"></i>
+        </button>
     </div>
     <div #scrollContainer class="col-12 card-container">
         <ng-content 
