--- a/src/app/components/search-modals/search-date-modal/search-date-modal.css
+++ b/src/app/components/search-modals/search-date-modal/search-date-modal.css
@@ -35,7 +35,9 @@
   /* background-color: #f7f7f7; */
   /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15); */
 }
-
+.airbnb-option.active {
+  border-color: var(--primary-text-color);
+}
 .airbnb-option p {
   font-size: 16px;
   margin-bottom: 4px;
