--- a/src/app/components/search-modals/search-date-modal/search-date-modal.html
+++ b/src/app/components/search-modals/search-date-modal/search-date-modal.html
@@ -1,9 +1,13 @@
 <div class="d-flex flex-row custom-date-modal-content airbnb-calendar-wrapper">
   <!-- Quick Select -->
-  <div class="d-flex flex-column gap-3 date-quick-options" style="margin-right:1rem !important">
+  <div
+    class="d-flex flex-column gap-3 date-quick-options"
+    style="margin-right: 1rem !important;"
+  >
     <div
       class="quick-option-card airbnb-option"
       (click)="selectQuickDate('today')"
+      [ngClass]="{ 'active': activeQuickOption === 'today' }"
     >
       <p class="fw-bold mb-0">{{ 'HEADER.TODAY' | translate }}</p>
       <small>{{ getTodayFormatted() }}</small>
@@ -11,6 +15,7 @@
     <div
       class="quick-option-card airbnb-option"
       (click)="selectQuickDate('tomorrow')"
+      [ngClass]="{ 'active': activeQuickOption === 'tomorrow' }"
     >
       <p class="fw-bold mb-0">
         {{ 'HEADER.TOMORROW' | translate }}
@@ -20,6 +25,7 @@
     <div
       class="quick-option-card airbnb-option"
       (click)="selectQuickDate('thisWeekend')"
+      [ngClass]="{ 'active': activeQuickOption === 'thisWeekend' }"
     >
       <p class="fw-bold mb-0">
         {{ 'HEADER.THIS_WEEKEND' | translate }}
