--- a/src/app/components/search-filter-group/search-filter-group.html
+++ b/src/app/components/search-filter-group/search-filter-group.html
@@ -17,6 +17,8 @@
     <input
       class="search-input dest"
       type="text"
+      [(ngModel)]="searchInputValue"
+      (input)="updateSearchValue($event)"
       [placeholder]="'HEADER.SEARCH_DESTINATIONS' | translate"
     />
     }
@@ -26,6 +28,7 @@
     #dateRef
     [ngClass]="{ 'active': activeFilter === 'date' }"
     (click)="setActive('date')"
+    style="min-width: 12rem !important;"
   >
     @if (isSearchBarSticky) {
     <p class="label">
@@ -34,7 +37,7 @@
     }@else{
     <p class="label">{{ 'HEADER.DATE' | translate }}</p>
     <p class="value">
-      {{ 'HEADER.ADD_DATES' | translate }}
+      {{ selectedDate || ('HEADER.ADD_DATES' | translate) }}
     </p>
     }
   </div>
@@ -55,7 +58,6 @@
           {{ getTotalGuests() }} {{ 'HEADER.GUEST' | translate }}
         </ng-container>
 
-
         <ng-container *ngIf="getInfantsCount() > 0">
           <ng-container *ngIf="getTotalGuests() > 0">, </ng-container>{{
           getInfantsCount() }} {{ 'HEADER.INFANT' | translate }}
@@ -67,7 +69,7 @@
       </p>
       }
     </div>
-    <div class="ms-auto">
+    <div class="ms-auto cursor-pointer" (click)="onSearch()" >
       <div
         class="search-icon-button d-flex align-items-center justify-content-center"
       >
@@ -123,7 +125,10 @@
         class="custom-scroll"
         style="max-height: 420px; padding: 18px 0px 18px 12px;"
       >
-        <app-search-where-modal></app-search-where-modal>
+        <app-search-where-modal
+          [searchValue]="searchInputValue"
+          (destinationSelected)="onDestinationSelected($event)"
+        ></app-search-where-modal>
       </div>
 
       <div
@@ -135,7 +140,9 @@
           padding: 20px;
         "
       >
-        <app-search-date-modal></app-search-date-modal>
+        <app-search-date-modal
+          (dateSelected)="onDateSelected($event)"
+        ></app-search-date-modal>
       </div>
 
       <div *ngSwitchCase="'who'" style="padding: 0px 10px;">
