--- a/src/app/layout/main-layout/main-layout.html
+++ b/src/app/layout/main-layout/main-layout.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <!-- <app-host-properties> </app-host-properties> -->
-<main>
+<main style="margin-top: 12rem;">
   <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
