--- a/src/app/pages/home/components/slider-card/slider-card.html
+++ b/src/app/pages/home/components/slider-card/slider-card.html
@@ -14,7 +14,7 @@
   </div>
 </div> -->
 
-<div class="card border-0  rounded rounded-2">
+<div class="card border-0  rounded rounded-2" (click)="onCardClick()">
   <div class="image-container position-relative">
     <img [src]="imageUrl" alt="listing image" class="img-fluid rounded-4 ratio-1x1">
     <div class="favorite badge  fw-semibold position-absolute top-0 start-0 m-2" 
