--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,9 +1,9 @@
 
 <div class="container col-12 col-md-12 col-xl-11 mx-auto list-container">
-    <app-slider [cardsPerView]="5" [cardPerSlide]="2">
+    <!-- <app-slider [cardsPerView]="5" [cardPerSlide]="2">
         <app-loading-cards [numberOfCards]="40"></app-loading-cards>
-    </app-slider>
-    
+    </app-slider> -->
+
     <app-slider
         [cardsPerView]="8"
         class="d-flex  col-12"
@@ -35,11 +35,11 @@
             [price]="item.price"
             [rating]="item.rating"
             [isFavorite]="item.isFavorite"
-        ></app-slider-card>        
+        ></app-slider-card>
 </app-slider>
-    
+
 <button class="btn btn-primary" (click)="toggleShow()">{{show? "hide":"show"}}</button>
-<!-- <app-modal 
+<!-- <app-modal
     [title]="'Modal'"
     [isVisible]="false"
     [modalContentClass]="'rounded rounded-5 border-0'"
@@ -56,7 +56,7 @@
                     [price]="item.price"
                     [rating]="item.rating"
                     [isFavorite]="item.isFavorite"
-            ></app-slider-card>        
+            ></app-slider-card>
         </app-slider>
         <app-slider
             [cardsPerView]="5"
@@ -69,7 +69,7 @@
                     [price]="item.price"
                     [rating]="item.rating"
                     [isFavorite]="item.isFavorite"
-            ></app-slider-card>        
+            ></app-slider-card>
         </app-slider>
         <app-slider
             [cardsPerView]="5"
@@ -82,7 +82,7 @@
                     [price]="item.price"
                     [rating]="item.rating"
                     [isFavorite]="item.isFavorite"
-            ></app-slider-card>        
+            ></app-slider-card>
         </app-slider>
         <app-slider
             [cardsPerView]="5"
@@ -95,7 +95,7 @@
                     [price]="item.price"
                     [rating]="item.rating"
                     [isFavorite]="item.isFavorite"
-            ></app-slider-card>        
+            ></app-slider-card>
         </app-slider>
         <div class="modal-footer">
             <p class="me-auto">this is footer</p>
@@ -103,13 +103,13 @@
 </app-modal> -->
 </div>
 
-<app-wish-list-modal 
+<app-wish-list-modal
         *ngIf="show"
-        (close)="toggleShow()" 
-        [show]="show" 
+        (close)="toggleShow()"
+        [show]="show"
         [userId]="'2'"
         class="col-12"
-        >    
+        >
 </app-wish-list-modal>
 
 
