--- a/src/app/pages/property-info/property-info.html
+++ b/src/app/pages/property-info/property-info.html
@@ -1,4 +1,4 @@
-<app-propertImage-galary></app-propertImage-galary>
+<app-propertImage-galary [propertyId]="propertyId"></app-propertImage-galary>
 <div class="property-container">
   <!-- Loading State -->
   <div *ngIf="isLoading" class="loading-state">
