--- a/src/app/pages/property-info/property-info.html
+++ b/src/app/pages/property-info/property-info.html
@@ -3,14 +3,12 @@
   <!-- Loading State -->
   <div *ngIf="isLoading" class="loading-state">
     <div class="spinner"></div>
-    <p>Loading property information...</p>
   </div>
-  <p>Property ID: {{ propertyId }}</p>
 
   <!-- Error State -->
   <div *ngIf="error" class="error-state">
     <p>{{ error }}</p>
-    <button (click)="showPropertyDetails(propertyId)">Retry</button>
+    <button (click)="showPropertyDetails(propertyId)"></button>
   </div>
 
   <!-- Property Content -->
@@ -39,24 +37,15 @@
     
     <!-- Tab Content -->
     <div >
-      <app-propertImage-galary
+      <!-- <app-propertImage-galary
         *ngIf="activeTab === 'gallery'"
         [propertyId]="propertyId">
-      </app-propertImage-galary>
-      
-      <!-- <app-property-reviews 
-        *ngIf="activeTab === 'reviews'"
-        [proper]="propertyId">
-      </app-property-reviews>
-      
-      <app-property-amenities 
-        *ngIf="activeTab === 'amenities'"
-        [property]="property">
-      </app-property-amenities> -->
+      </app-propertImage-galary> -->
+  
     </div>
   </div>
 </div>
-
+<!-- 
 <app-propertImage-galary
   [propertyId]="propertyId">
-</app-propertImage-galary>
+</app-propertImage-galary> -->
