--- a/src/app/pages/home/components/slider-card/slider-card.html
+++ b/src/app/pages/home/components/slider-card/slider-card.html
@@ -37,7 +37,7 @@
         <i class="bi bi-star-fill text-warning me-1 rating" ></i>{{ rating }}
       </div>
       <div class="price">
-        ${{ price }} <span class="small">for {{night}} night</span>
+        ${{ price }} <span class="small">per night</span>
       </div>
     </div>
   </div>
