--- a/src/app/components/mainswiper/mainswiper.css
+++ b/src/app/components/mainswiper/mainswiper.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
 }
 
 .title {
@@ -50,7 +50,7 @@
 
 swiper-container {
   /* background-color: red; */
-  padding: 1rem 0 !important;
+  padding: 0rem 0 1rem 0!important;
   width: 100%;
   overflow: hidden;
 }
