--- a/src/app/pages/home/components/slider-card/slider-card.css
+++ b/src/app/pages/home/components/slider-card/slider-card.css
@@ -66,38 +66,51 @@
   background-color: var(--bg-color);
   color: var(--primary-text-color);
 }
+
 .card:hover {
   /* transform: scale(1.02); */
 }
+
 .image-container img {
   width: 100%;
   height: 160px;
   object-fit: cover;
 }
-.favorite {
-  font-size: 12px;
-  padding: 4px 10px;
-  border-radius: 999px;
 
-  color: var(--primary-text-color);
+.favorite {
+  font-size: 14px;
+  padding: 4px10px;
+  border-radius: 999px;
+  color: white;
   background-color: var(--bg-color);
+  transition: all 0.3s ease-in-out;
 }
+
+.heart:hover {
+  transform: scale(1.1);
+}
+
 .heart {
   background: none;
   border: none;
   cursor: pointer;
+  color: white;
 }
+
 .title {
   font-size: 14px;
 }
+
 .subtitle {
   font-size: 12px;
   color: var(--secondary-text-color) !important;
 }
+
 .price {
   font-size: 12px;
   color: var(--secondary-text-color) !important;
 }
+
 .rating {
   font-size: 12px;
   color: var(--secondary-text-color) !important;
