--- a/src/app/pages/home/components/slider-card/slider-card.html
+++ b/src/app/pages/home/components/slider-card/slider-card.html
@@ -14,31 +14,60 @@
   </div>
 </div> -->
 
-<div class="card border-0  rounded rounded-2 cursor-pointer" (click)="onCardClick()">
-  <div class="image-container position-relative">
-    <img [src]="imageUrl" alt="listing image" class="img-fluid rounded-4 ratio-1x1 ">
-    <div class="favorite badge  fw-semibold position-absolute top-0 start-0 m-2"
+<div
+  class="card border-0 rounded rounded-2 cursor-pointer"
 
+>
+  <div class="image-container position-relative">
+    <img
+      [src]="imageUrl"
+      alt="listing image"
+      class="img-fluid rounded-4 ratio-1x1"
+    />
+    <div
+      class="favorite badge fw-semibold position-absolute top-0 start-0 m-2"
       *ngIf="isFavorite"
     >
       Guest favorite
     </div>
-    <button class="heart position-absolute top-0 end-0 m-2">
-      <i class="bi bi-heart  fs-5"></i>
+    <button class="heart position-absolute top-0 end-0 m-2"   (click)="onCardClick()">
+      <div
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 32 32"
+          aria-hidden="true"
+          role="presentation"
+          focusable="false"
+          style="
+            display: block;
+            fill: rgba(0, 0, 0, 0.5);
+            height: 24px;
+            width: 24px;
+            stroke: white;
+            stroke-width: 2;
+            overflow: visible;
+          "
+        >
+          <path
+            d="M16 28c7-4.73 14-10 14-17a6.98 6.98 0 0 0-7-7c-1.8 0-3.58.68-4.95 2.05L16 8.1l-2.05-2.05a6.98 6.98 0 0 0-9.9 0A6.98 6.98 0 0 0 2 11c0 7 7 12.27 14 17z"
+          ></path>
+        </svg>
+      </div>
     </button>
   </div>
 
   <div class="info px-2 pt-2 pb-3">
-    <div class="title fw-semibold ">{{ title }}</div>
+    <div class="title fw-semibold">{{ title }}</div>
     <div class="subtitle small">{{ subtitle }}</div>
 
-    <div class="d-flex justify-content-between align-items-center mt-1 flex-row-reverse">
-      <div class="rating  small d-flex align-items-center">
-        <i class="bi bi-star-fill text-warning me-1 rating" ></i>{{ rating }}
+    <div
+      class="d-flex justify-content-between align-items-center mt-1 flex-row-reverse"
+    >
+      <div class="rating small d-flex align-items-center">
+        <i class="bi bi-star-fill text-warning me-1 rating"></i>{{ rating }}
       </div>
-      <div class="price">
-        ${{ price }} <span class="small">per night</span>
-      </div>
+      <div class="price">${{ price }} <span class="small">per night</span></div>
     </div>
   </div>
 </div>
