--- a/src/app/pages/wishlist/wishlist.css
+++ b/src/app/pages/wishlist/wishlist.css
@@ -147,11 +147,11 @@
 
 .wishlist-card {
   /*background: white;
-  *//*border-radius: 12px;
-  */overflow: hidden;
+  */ /*border-radius: 12px;
+  */
+  overflow: hidden;
   cursor: pointer;
   transition: all 0.2s ease;
-
 }
 
 .wishlist-image {
@@ -159,8 +159,7 @@
   width: 100%;
   height: 250px;
   overflow: hidden;
-  border-radius:35px ;
-
+  border-radius: 35px;
 }
 
 .cover-image {
@@ -266,4 +265,64 @@
   .wishlist-content {
     padding: 12px;
   }
+}
+
+.delete-btn {
+  position: absolute;
+  top: 8px;
+  left: 8px;
+  border: none;
+  cursor: pointer;
+  z-index: 2;
+  background: rgba(255, 255, 255, 0.4);
+  color: #222222;
+  padding: 1px 8px;
+  border-radius: 20px;
+  font-size: 24px;
+  font-weight: 600;
+  backdrop-filter: blur(10px);
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+}
+.delete-btn:hover {
+  transform: scale(1.1);
+
+  background: rgba(255, 255, 255, 0.8);
+}
+
+.modal-actions {
+  /* margin-top: 20px; */
+  display: flex !important;
+  justify-content: space-between !important;
+  align-items: center !important;
+  gap: 15rem;
+  /* border-top: 1px solid #ccc; */
+  /* padding-top: 0.7rem; */
+}
+
+.delete-confirm {
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  cursor: pointer;
+  font-size: 20px;
+
+  border-radius: 6px;
+}
+
+.cancel {
+  /*background-color: #f2f2f2;
+  */
+  border: none;
+  font-size: 20px;
+  padding: 8px 16px;
+  cursor: pointer;
+  border-radius: 6px;
+}
+.cancel:hover {
+  background-color: #f2f2f2;
 }
